docs-archive/apache-airflow-providers-tableau/5.1.1/_sources/_api/airflow/providers/tableau/hooks/tableau/index.rst.txt
airflow.providers.tableau.hooks.tableau
=======================================

.. py:module:: airflow.providers.tableau.hooks.tableau


Exceptions
----------

.. autoapisummary::

   airflow.providers.tableau.hooks.tableau.TableauJobFailedException


Classes
-------

.. autoapisummary::

   airflow.providers.tableau.hooks.tableau.TableauJobFinishCode
   airflow.providers.tableau.hooks.tableau.TableauHook


Functions
---------

.. autoapisummary::

   airflow.providers.tableau.hooks.tableau.parse_boolean


Module Contents
---------------

.. py:function:: parse_boolean(val)

   Try to parse a string into boolean.

   The string is returned as-is if it does not look like a boolean value.


.. py:exception:: TableauJobFailedException

   Bases: :py:obj:`airflow.exceptions.AirflowException`


   An exception that indicates that a Job failed to complete.


.. py:class:: TableauJobFinishCode

   Bases: :py:obj:`enum.Enum`


   The finish code indicates the status of the job.

   .. seealso:: https://help.tableau.com/current/api/rest_api/en-us/REST/rest_api_ref.htm#query_job


   .. py:attribute:: PENDING
      :value: -1



   .. py:attribute:: SUCCESS
      :value: 0



   .. py:attribute:: ERROR
      :value: 1



   .. py:attribute:: CANCELED
      :value: 2



.. py:class:: TableauHook(site_id = None, tableau_conn_id = default_conn_name)

   Bases: :py:obj:`airflow.sdk.BaseHook`


   Connects to the Tableau Server Instance and allows to communicate with it.

   Can be used as a context manager: automatically authenticates the connection
   when opened and signs out when closed.

   .. seealso:: https://tableau.github.io/server-client-python/docs/

   :param site_id: The id of the site where the workbook belongs to.
       It will connect to the default site if you don't provide an id.
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.


   .. py:attribute:: conn_name_attr
      :value: 'tableau_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'tableau_default'



   .. py:attribute:: conn_type
      :value: 'tableau'



   .. py:attribute:: hook_name
      :value: 'Tableau'



   .. py:attribute:: tableau_conn_id
      :value: 'tableau_default'



   .. py:attribute:: conn


   .. py:attribute:: site_id


   .. py:attribute:: server


   .. py:attribute:: tableau_conn
      :value: None



   .. py:method:: __enter__()


   .. py:method:: __exit__(exc_type, exc_val, exc_tb)


   .. py:method:: get_conn()

      Sign in to the Tableau Server.

      :return: an authorized Tableau Server Context Manager object.



   .. py:method:: get_all(resource_name)

      Get all items of the given resource.

      .. see also:: https://tableau.github.io/server-client-python/docs/page-through-results

      :param resource_name: The name of the resource to paginate.
          For example: jobs or workbooks.
      :return: all items by returning a Pager.



   .. py:method:: get_job_status(job_id)

      Get the current state of a defined Tableau Job.

      .. see also:: https://tableau.github.io/server-client-python/docs/api-ref#jobs

      :param job_id: The id of the job to check.
      :return: An Enum that describe the Tableau job's return code



   .. py:method:: wait_for_state(job_id, target_state, check_interval)

      Wait until the current state of a defined Tableau Job is target_state or different from PENDING.

      :param job_id: The id of the job to check.
      :param target_state: Enum that describe the Tableau job's target state
      :param check_interval: time in seconds that the job should wait in
          between each instance state checks until operation is completed
      :return: return True if the job is equal to the target_status, False otherwise.



